Created rental controller