@@ -2,18 +2,19 @@ package com.example.carsharingservice.service.impl;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 import com.example.carsharingservice.model.Car;
 import com.example.carsharingservice.model.Rental;
 import com.example.carsharingservice.model.User;
 import com.example.carsharingservice.repository.RentalRepository;
 import com.example.carsharingservice.service.CarService;
-import com.example.carsharingservice.service.RentalServices;
+import com.example.carsharingservice.service.RentalService;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 @Service
 @AllArgsConstructor
-public class RentalServiceImpl implements RentalServices {
+public class RentalServiceImpl implements RentalService {
     private final CarService carService;
     private final RentalRepository rentalRepository;
 
@@ -34,7 +35,7 @@ public class RentalServiceImpl implements RentalServices {
         List<Rental> rental = rentalRepository.getByUserId(userId);
             return rental.stream()
                     .filter(rental1 -> rental1.getActualRentalReturn() == null && isRented)
-                    .toList();
+                    .collect(Collectors.toList());
     }
 
     @Override
